--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,7 +4,7 @@
   "builds": [
     {
       "src": "server.js",
-      "use": "@vercel/model"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
