--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "serverless-http": "^4.0.0",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "vnpay": "^2.4.4"
   }
 }
