--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.8.3",
     "@reduxjs/toolkit": "^2.9.0",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
+    "crypto-js": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
